--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>Jane Doe</h1>
-									<p>Senior Astral Projectionist</p>
+									<h1>Addy Josephine Evans</h1>
+									<p>Welcome to my website! I am a second year astronomy PhD student interested in the indirect detection of dark matter using stellar kinematics and gamma-ray radiation from objects in the Local Universe. </p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img src="images/mewithtelescope.jpg" alt="" />
 								</a>
 							</article>
 
