--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Addy Josephine Evans</h1>
-									<p>Welcome to my website! I am a second year astronomy PhD student interested in the indirect detection of dark matter using stellar kinematics and gamma-ray radiation from objects in the Local Universe. </p>
+									<p>Welcome to my website! I am a second year astronomy PhD student interested in discovering more about the fundamental nature of dark matter using astrophysical probes. </p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
