--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
+						<a href="#research" class="icon solid fa-folder"><span>Research</span></a>
+            				<a href="#service" class="icon brands fa-twitter"><span>Activism and Service</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>
+						
 					</nav>
 
 				<!-- Main -->
@@ -34,16 +35,16 @@
 									<h1>Addy Josephine Evans</h1>
 									<p>Welcome to my website! I am a second year astronomy PhD student interested in discovering more about the fundamental nature of dark matter using astrophysical probes. </p>
 								</header>
-								<a href="#work" class="jumplink pic">
+								<a href="#research" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
 									<img src="images/mewithtelescope.jpg" alt="" />
 								</a>
 							</article>
 
-						<!-- Work -->
-							<article id="work" class="panel">
+						<!-- Research -->
+							<article id="research" class="panel">
 								<header>
-									<h2>Work</h2>
+									<h2>Research</h2>
 								</header>
 								<p>
 									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
