--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#research" class="icon solid fa-folder"><span>Research</span></a>
-            				<a href="#service" class="icon brands fa-twitter"><span>Activism and Service</span></a>
+						<a href="#research" class="icon solid fa-star"><span>Research</span></a>
+            				<a href="#service" class="icon brands fa-heart"><span>Activism & Service</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 						
 					</nav>
