--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#research" class="icon solid fa-star"><span>Research</span></a>
-            				<a href="#service" class="icon brands fa-heart"><span>Activism & Service</span></a>
+            				<a href="#service" class="icon brands fa-f004"><span>Activism & Service</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 						
 					</nav>
